# MyWebServer

./: .gitignore  CMakeLists.txt  INTERVIEW_QA.md  README.md  gen_model.py  main.cpp  predict.html  run.sh  test_model.onnx
include/: ai_engine.h  buffer.h  epoller.h  heaptimer.h  httpconn.h  log.h  sqlconnpool.h  threadpool.h  webserver.h
src/: ai_engine.cpp  buffer.cpp  epoller.cpp  heaptimer.cpp  httpconn.cpp  log.cpp  sqlconnpool.cpp  webserver.cpp
